# Pok3Dex

./: .gitignore  README.md  vcpkg.json
Pok3Dex/: CMakeLists.txt  main.cpp  resource.rc
Pok3Dex/Pok3Dex/x64/Debug/: Pok3Dex.exe.recipe  Pok3Dex.ilk  Pok3Dex.vcxproj.FileListAbsolute.txt  vc143.idb
Pok3Dex/Pok3Dex/x64/Debug/Pok3Dex.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pok3Dex.lastbuildstate  Pok3Dex.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Pok3Dex/Pok3Dex/x64/Release/: Pok3Dex.exe.recipe  Pok3Dex.iobj  Pok3Dex.ipdb  Pok3Dex.vcxproj.FileListAbsolute.txt  resource.res
Pok3Dex/Pok3Dex/x64/Release/Pok3Dex.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pok3Dex.lastbuildstate  Pok3Dex.write.1u.tlog  VcpkgInstallManifestx64-windows.read.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Pok3Dex/shaders/: vertex.glsl
